unpackaged/main/default/objects/Strategic_Partner_Assignee__c/Strategic_Partner_Assignee__c.object-meta.xml
<CustomObject>
    <label>Strategic Partner Assignee</label>
    <nameField>
        <displayFormat>SPA{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Strategic Partner Assignees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>