unpackaged/main/default/objects/Strategic_Partner_Assignee__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Strategic Partner Assignees</relationshipLabel>
    <relationshipName>Strategic_Partner_Assignees</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>