unpackaged/main/default/objects/Strategic_Partner_Assignee__c/fields/Auto_Assignee_Active__c.field-meta.xml
<CustomField>
    <fullName>Auto_Assignee_Active__c</fullName>
    <formula>Auto_Assign_User__r.Active__c</formula>
    <label>Auto Assignee Active</label>
    <type>Checkbox</type>
</CustomField>