unpackaged/main/default/objects/Strategic_Partner_Assignee__c/fields/Auto_Assignee_Name__c.field-meta.xml
<CustomField>
    <fullName>Auto_Assignee_Name__c</fullName>
    <formula>Auto_Assign_User__r.Rep_Full_Name__c</formula>
    <label>Auto Assignee Name</label>
    <type>Text</type>
</CustomField>