unpackaged/main/default/objects/Strategic_Partner_Assignee__c/fields/Auto_Assignee_Number__c.field-meta.xml
<CustomField>
    <fullName>Auto_Assignee_Number__c</fullName>
    <formula>Auto_Assign_User__r.Auto_Assign_Number__c</formula>
    <label>Auto Assignee Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>