unpackaged/main/default/objects/Strategic_Partner_Assignee__c/fields/Strategic_Partner_Status__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Partner_Status__c</fullName>
    <formula>Text(Account__r.Status__c)</formula>
    <label>Strategic Partner Status</label>
    <type>Text</type>
</CustomField>